Fix vertical align in CSS

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   flex-flow: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
   background-color: #d5e1ef;
 }
 
